# h36m-tools

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements-gpu.txt  requirements.txt
h36m_kit/: loaders.py  utils.py
h36m_tools/: conversions.py  dims.py  file_io.py  files.py  kinematics.py  load.py  loader.py  logging.py  metadata.py  metrics.py  normalize.py  representations.py  rotations.py  utils.py  visualization.py  visualize.py
scripts/: animate_sequence.py  compare_expmap.py  debug_tensor.py  inspect_files.py  plot_sequence.py  preprocess.py
