[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h36m_tools"
version = "0.1.0"
description = "H3.6M Preprocessing and Visualization Tools"
requires-python = ">=3.12"

authors = [
    { name = "Jinger Chong", email = "jinger@mit.edu" }
]

dependencies = [
    "matplotlib==3.10.7",
    "torch==2.9.1",
    "numpy==2.3.5",
    "roma==1.5.4",
    "cdflib==1.3.7",
    "tqdm==4.67.1"
]

[tool.setuptools.packages.find]
where = ["."]
